find the ASCII value

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Multiply_the_floatingPoint_Value</name>
+	<name>Find_the_ascii_value</name>
 	<comment></comment>
 	<projects>
 	</projects>
