Find the quotient and reminder of number

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Find_the_ascii_value</name>
+	<name>find_Quotent_and_reminder</name>
 	<comment></comment>
 	<projects>
 	</projects>
