--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>find_Quotent_and_reminder</name>
+	<name>find_size_of_datatypes</name>
 	<comment></comment>
 	<projects>
 	</projects>
