find the largest and smallest number

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>check_vowel_consonent</name>
+	<name>find_Largest_num</name>
 	<comment></comment>
 	<projects>
 	</projects>
