find the root value of quadratic equation

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>find_Largest_num</name>
+	<name>find_the_root_quadratic_equ</name>
 	<comment></comment>
 	<projects>
 	</projects>
